Bug 32643 - PlantyContentOutlinePage: 'Open With' shows up in context menu for non-existant external entity